--- a/api_registro_entrenamiento/src/main/resources/application.properties
+++ b/api_registro_entrenamiento/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+# Configuración de JPA
+spring.jpa.hibernate.ddl-auto=update
 spring.application.name=api_registro_entrenamiento
+server.port=8080
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+
+# Configuración de PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/training_routines
+spring.datasource.username=Training
+spring.datasource.password=1234
+spring.datasource.driver-class-name=org.postgresql.Driver
