--- a/api_registro_entrenamiento/pom.xml
+++ b/api_registro_entrenamiento/pom.xml
@@ -39,6 +39,12 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
+		<!-- Spring Security -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
@@ -62,6 +68,7 @@
 			<artifactId>dotenv-java</artifactId>
 			<version>3.0.2</version>
 		</dependency>
+
 	</dependencies>
 
 	<build>
